--- a/css/snippets.css
+++ b/css/snippets.css
@@ -42,6 +42,7 @@ body{
     background: var(--color-6);
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    margin-top: 20px;
 }
 
 .section1 .textarea{
@@ -54,17 +55,12 @@ body{
     z-index: 10;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    padding: 20px 30px;
-    transition:max-height 1s ease;
-}
-
-.section1 input:checked ~ div.textarea{
     max-height: fit-content; /*auto*/
     opacity: 1;
     padding: 20px 30px;
     transition:max-height 1s ease;
-
 }
+
 .b{
     text-decoration: underline 2px;
 }
