--- a/css/boilerplates-425.css
+++ b/css/boilerplates-425.css
@@ -15,34 +15,64 @@
 
     #section1{
         padding: 15px;
-        display: none;
+        font-size: 15px;
     }
 
     #s1d1{
         width:100%;
     }
 
-    #section2{
+    #section2, #section3, #section4{
         padding:15px;
+        margin:0;
     }
 
     .codearea{
         width:100%;
-        margin-top: 0;
+        margin:0;
         font-size: 12px;
     }
 
-    #htmlbpcheckdiv div label span{
+    .codearea:nth-child(3){
+        margin-top: 5px;
+    }
+
+    .bpcheckdiv div label span{
         padding: 3px 6px;
         font-size: 15px;
         color:var(--color-5);
-        border-radius: 5px;
+        border-radius: 4px;
         transition: 0.2s;
         user-select: none;
         flex-wrap: wrap;
     }
 
-    .htmlinput{
-        margin-bottom: 10px;
+    .input{
+        margin-bottom:10px;
+        width:100%;
+        font-size: 15px;
+    }
+
+    #s1d2{
+        width: 100%;
+        font-size: 15px;
+        margin: 10px 0px;
+    }
+
+    footer div:nth-child(1){
+        display: none;
+    }
+
+    footer div:nth-child(2){
+        flex:1;
+        margin-left: 0px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    footer div:nth-child(2) a i{
+        font-size:20px;
+        margin:0px 6px;
     }
 }
