--- a/css/style-425.css
+++ b/css/style-425.css
@@ -36,4 +36,24 @@
         margin:15px;
     }
 
+   footer div:nth-child(1){
+       display: none;
+   }
+
+   footer div:nth-child(1){
+    display: none;
+}
+
+footer div:nth-child(2){
+    flex:1;
+    margin-left: 0px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer div:nth-child(2) a i{
+    font-size:20px;
+    margin:0px 6px;
+}
 }
